opam-version: "2.0"
name: "cry"
version: "0.6.5"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-cry"
bug-reports: "https://github.com/savonet/ocaml-cry/issues"
depends: [
  "ocaml"
  "ocamlfind" {build}
]
depopts: [
  "ssl" {>= "0.5.9"}
  "osx-secure-transport"
]
build: [
  ["./bootstrap"] {dev}
  ["./configure" "--prefix" prefix]
  [make "clean"] {dev}
  [make]
]
install: [make "install"]
dev-repo: "git+https://github.com/savonet/ocaml-cry.git"
synopsis:
  "The cry library is an implementation of the shout protocol to connect to audio diffusion servers such as icecast"
